Fixed 3d container overlapping nav bar

--- a/main.css
+++ b/main.css
@@ -19,6 +19,7 @@ body {
   position: sticky;
   top: 0;
   border-bottom: 3px solid #e63946;
+  z-index: 100;
 }
 
 .topnav a {
